source/objects/Task__c/fields/Actual_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Begin_Date__c</fullName>
    <label>Actual Begin Date</label>
    <type>Date</type>
</CustomField>