source/objects/Task__c/fields/Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>