source/objects/Task__c/fields/Percent_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Completed__c</fullName>
    <label>Percent Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>