source/objects/Task__c/fields/Planned_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Begin_Date__c</fullName>
    <label>Planned Begin Date</label>
    <type>Date</type>
</CustomField>