source/objects/Task__c/fields/Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>Planned_Duration__c</fullName>
    <label>Planned Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>