source/objects/Task__c/fields/Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Status__c</fullName>
    <label>Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>