source/objects/Task__c/fields/Utilized__c.field-meta.xml
<CustomField>
    <fullName>Utilized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilized</label>
    <type>Checkbox</type>
</CustomField>