source/objects/Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Project__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Planned_Duration__c</columns>
    <columns>Estimated_Duration__c</columns>
    <columns>Approved_Duration__c</columns>
    <columns>Remaining_Duration__c</columns>
    <columns>Utilized__c</columns>
    <columns>Billable__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>