source/objects/Task__c/listViews/IT_Support_Task.listView-meta.xml
<ListView>
    <fullName>IT_Support_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>IT Support</label>
    <queue>IT_Support</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>