source/objects/Task__c/listViews/Lead_Managers_Task.listView-meta.xml
<ListView>
    <fullName>Lead_Managers_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Managers</label>
    <queue>Lead_Managers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>