source/objects/Task__c/listViews/My_Tasks.listView-meta.xml
<ListView>
    <fullName>My_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Task_Status__c</columns>
    <columns>Planned_End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Tasks</label>
    <language>en_US</language>
</ListView>